--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,27 @@
   </head>
 
   <body>
-    <%= yield %>
+  <main>
+    <header></header>
+    <nav>
+    <nav>
+  <% if user_signed_in? %>
+    <p>Bienvenido, <%= current_user.email %>!</p>
+    <%= link_to 'Cerrar sesión', destroy_user_session_path, method: :delete, class: "btn" %>
+  <% else %>
+    <%= link_to 'Iniciar sesión', new_user_session_path, class: "btn" %> |
+    <%= link_to 'Registrarse', new_user_registration_path, class: "btn" %>
+  <% end %>
+</nav>
+
+    </nav>
+    <aside></aside>
+    <section>
+      <article>
+        <%= yield %>
+      </article>
+    </section>
+    <footer></footer>
+  </main>
   </body>
 </html>
